re PR tree-optimization/59047 (wrong code for bitfields at -O3 on x86_64-linux-gnu)

2013-11-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/59047
	* tree-predcom.c (ref_at_iteration): Handle bitfield accesses
	properly.

	* gcc.dg/torture/pr59047.c: New testcase.

From-SVN: r204566